lib/flux/apps/servarr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: tv
    app.kubernetes.io/part-of: servarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/component: tv
        app.kubernetes.io/part-of: servarr
      annotations:
        checksum/config: ${config_checksum}
    spec:
      enableServiceLinks: false
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.20@sha256:f247545d23ba8b233d6604575347e48a623fe6ad75dda02348bf81917f3b5c06 # {"$imagepolicy": "servarr:sonarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: data
              mountPath: /config
            - name: media
              mountPath: /tv
              subPath: shows
            - name: media
              mountPath: /downloads
              subPath: unsorted
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: media
          persistentVolumeClaim:
            claimName: sonarr-media
        - name: config
          secret:
            secretName: ${config_secret}
