lib/flux/apps/servarr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
