lib/flux/apps/servarr/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Sonarr
    gethomepage.dev/description: TV
    gethomepage.dev/icon: sonarr.png
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ${path}
      backendRefs:
        - name: sonarr
          port: 80
